welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: not found: value estSuirBiscuit
while (estSuirBiscuit() == true){
       ^