welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estSurBiscuit() != true){
	recule();
}
while (estSuirBiscuit() == true){
	prendBiscuit();
}
while (porteBiscuit() == true){
	avance()
}
